--- a/app/src/main/assets/aircraft.html
+++ b/app/src/main/assets/aircraft.html
@@ -1762,7 +1762,7 @@ function setAircraftWakeTurbulence() {
                         <td>Type</td><td><input spellcheck="false" id="icaoAircraftTypeInput"/></td>
                     </tr>
                     <tr>
-                        <td>ICAO Mode S Code</td><td><input spellcheck="false" type="number"  id="icaoAircraftIcaoInput"/></td>
+                        <td>ICAO Mode S Code</td><td><input spellcheck="false" id="icaoAircraftIcaoInput"/></td>
                     </tr>
                     <tr>
                         <td>Wake Turbulence</td><td><input id="icaoWakeTurbulenceInput" readonly onclick='$("#icaoWakeTurbulenceModal").modal()'/></td>
